# pdftranslate-mcp

./: FEATHERFLOW_FIX.md  README.md  pyproject.toml
pdf2zh/: __init__.py  converter.py  high_level.py  mcp_server.py  pdf2zh.py  translator.py
