[project]
name = "pdf2zh"
version = "1.9.11"
description = "PDF scientific document translator (MCP server) — preserves formulas & layout"
authors = [{ name = "Byaidu", email = "byaidux@gmail.com" }]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # ── PDF processing ──
    "pymupdf<1.25.3",
    "pdfminer-six==20250416",
    "pikepdf",
    "fontTools",
    # ── Layout analysis ──
    "onnx",
    "onnxruntime",
    "opencv-python-headless",
    "numpy",
    "huggingface_hub",
    "babeldoc>=0.1.22",
    # ── Translation (OpenAI-compatible) ──
    "openai>=1.0.0",
    "tenacity",
    # ── MCP server ──
    "mcp>=1.6.0",
    # ── Misc ──
    "requests",
    "tqdm",
    "peewee>=3.17.8",
    "rich",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "build",
    "bumpver>=2024.1130",
]

[project.urls]
Homepage = "https://github.com/Byaidu/PDFMathTranslate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pdf2zh = "pdf2zh.mcp_server:main"

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741"]
max-line-length = 88



[bumpver]
current_version = "1.9.11"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pdf2zh/__init__.py" = [
    '__version__ = "{version}"'
]
